# FullSOMGAOptimiser

./: CMakeLists.txt  README.md
FullSOMGAOptimiser/: CMakeLists.txt  FullSOMGAOptimiser.cpp  FullSOMGAOptimiser.h
FullSOMGAOptimiser/Configurations/: Arguments.txt  GeneticAlgorithmGenes_Config.txt  GeneticAlgorithm_Config.txt  SelfOrganisingMap_Config.txt  TEMP
FullSOMGAOptimiser/Output/: 01-10-2019-004559_Best_Solution_Parameters_Iteration_2_ionosphere.data.txt  02-10-2019-055306_Best_Solution_Parameters_Iteration_6_ionosphere.data.txt  02-10-2019-142358_BestSolutionParameters__ionosphere.data.txt  02-10-2019-142358_TestAndTrainingSetQEHistories_ionosphere.data.txt  02-10-2019-142401_NeuronMap_ionosphere.data.txt  02-10-2019-211031_Best_Solution_Parameters_Iteration_8_ionosphere.data.txt  03-10-2019-041352_BestSolutionParameters__ionosphere.data.txt  03-10-2019-041352_TestAndTrainingSetQEHistories_ionosphere.data.txt  03-10-2019-041353_NeuronMap_ionosphere.data.txt  03-10-2019-053710_Best_Solution_Parameters_Iteration_0_monks1.data.txt  03-10-2019-120443_BestSolutionParameters__iris.data.txt  03-10-2019-120443_NeuronMap_iris.data.txt  03-10-2019-120443_TestAndTrainingSetQEHistories_iris.data.txt  03-10-2019-194840_BestSolutionParameters__iris.data.txt  03-10-2019-194840_NeuronMap_iris.data.txt  03-10-2019-194840_TestAndTrainingSetQEHistories_iris.data.txt  04-10-2019-172510_Best_Solution_Parameters_Iteration_0_iris.data.txt  06-10-2019-063325_Best_Solution_Parameters_Iteration_1_iris.data.txt  06-10-2019-121031_Best_Solution_Parameters_Iteration_5_iris.data.txt  06-10-2019-121732_TestAndTrainingSetQEHistories_iris.data.txt  06-10-2019-121733_NeuronMap_iris.data.txt  (+51 more)
(+24734 files in other folders)
